--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="bg_default">@color/white</color>
+    <color name="bg_work">#FF00FF00</color>
+    <color name="bg_rest">#FFFF0000</color>
 </resources>
