--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -83,12 +83,11 @@
         android:id="@+id/btnNotificationFrequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         tools:text="@string/sound_1min"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnStart" />
-
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
